Fixed overlap problem

--- a/style.css
+++ b/style.css
@@ -28,12 +28,16 @@ h1 {
    text-align: left;
    margin: auto;
    width: 350px;
+   padding-top: 100px;
+   padding-bottom: 50px;
  }
 
  #answerbox{
    text-align: center;
    margin: auto;
    width: 550px;
+   padding-top: 100px;
+   padding-bottom: 50px;
    position: absolute;
    width: 99%;
  }
@@ -42,7 +46,7 @@ h1 {
    text-align: center;
    position: absolute;
    width: 99%;
-   padding: 50px 0;
+   padding-bottom: 1000px;
  }
 
  #buttons{
